[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "hitster-cards"
version = "0.1.0"
requires-python = ">= 3.12"
dependencies = [
    "typst~=0.13.0",
    "spotipy~=2.25.1",
    "qrcode~=8.0",
    "matplotlib~=3.10.1",
    "python-dotenv~=1.1.1",
]
