[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "hitster-cards"
version = "0.1.0"
requires-python = ">= 3.12"
dependencies = [
    "click",
    "typst~=0.13.0",
    "spotipy~=2.25.1",
    "requests",
    "qrcode[pil]~=8.0",
    "tqdm",
    "matplotlib~=3.10.1"
]

[project.scripts]
hitster-cards = "hitster_cards.main:main"
